Include a link to the API documentation

--- a/ComicAPI/src/main/resources/static/index.html
+++ b/ComicAPI/src/main/resources/static/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p>Web Comic downloader v2.0. A rethink of the initial comic caching program. Details <a href="https://bitbucket.org/kkdad/comiccacher/src/master/">here.</a></p>
+<p>Web Comic downloader v2.0. A rethink of the initial comic caching program.</p>
+<ul>
+    <li><a href="https://bitbucket.org/kkdad/comiccacher/src/master/">Project</a></li>
+    <li><a href="docs/index.html">API Documentation</a></li>
+</ul>
+
 </body>
 </html>
