Updated gradle tasks to include ComicViewer in ComicAPI docker container
Former-commit-id: 035937ff102cad4771915b5a2fb67597630791b8

--- a/ComicViewer/src/index.html
+++ b/ComicViewer/src/index.html
@@ -12,5 +12,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <a class="link" href="https://bitbucket.org/kkdad/comiccacher/src/master/">Project</a>
+  <a class="link" href="docs/index.html">API Documentation</a>
 </body>
 </html>
