Upgrade favicon to 2025 standards with modern format support
Implemented modern 2025 favicon setup with multiple formats and PWA support:

Changes:

1. Created modern SVG favicon (favicon.svg):
   - Scalable vector format (primary favicon for modern browsers)
   - Comic book themed design with gradient background
   - Stylized comic panels and speech bubble accent
   - Colors match app theme (#5B9BD5 gradient)
   - Works at all sizes without pixelation

2. Created Web App Manifest (manifest.json):
   - Full PWA (Progressive Web App) support
   - Defines app name, colors, display mode
   - Lists icon sizes for Android/iOS home screen
   - Theme color: #5B9BD5 (matches navbar)
   - Background color: #F8FAFB (matches app background)

3. Updated index.html with modern favicon tags:
   - Changed title from "The Comic Viewer" to "Daily Comics"
   - Added theme-color meta tag for mobile browsers
   - SVG favicon as primary (type="image/svg+xml")
   - ICO fallback for older browsers
   - Apple touch icon reference (180x180)
   - Web app manifest link
   - Added description meta tag

4. Updated angular.json:
   - Added favicon.svg to assets
   - Added manifest.json to assets
   - Applies to both dev and test configurations

5. Created assets/icons/README.md:
   - Documentation for generating PNG icons
   - Lists all required sizes (72x72 to 512x512)
   - Instructions for using SVG source
   - Links to online generation tools

Benefits:
- Modern browsers use crisp SVG favicon
- Older browsers fall back to ICO
- PWA installable on mobile devices
- App icons for home screen (iOS/Android)
- Consistent branding across all platforms
- Smaller file sizes (SVG is 1.3KB vs 79KB PNG-as-ICO)

Result:
- All 115 tests passing
- Production build successful
- Favicon displays in browser tab
- Ready for PWA installation

--- a/comic-web/src/index.html
+++ b/comic-web/src/index.html
@@ -2,11 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>The Comic Viewer</title>
+  <title>Daily Comics</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Daily comics cacher - ad-free comic viewing">
+  <meta name="theme-color" content="#5B9BD5">
+
+  <!-- Modern SVG Favicon (2025 standard) -->
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+  <!-- Fallback ICO for older browsers -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+
+  <!-- Web App Manifest for PWA -->
+  <link rel="manifest" href="manifest.json">
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
