--- a/comic-web/src/index.html
+++ b/comic-web/src/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>The Comic Viewer</title>
+  <title>Daily Comics</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Daily comics cacher - ad-free comic viewing">
+  <meta name="theme-color" content="#5B9BD5">
+
+  <!-- Modern SVG Favicon (2025 standard - works in all modern browsers) -->
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+  <!-- Web App Manifest for PWA metadata -->
+  <link rel="manifest" href="manifest.json">
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
